<resources>
    <string name="Aranese">Aranés</string>
    <string name="Catalan">Català</string>
    <string name="English">English</string>
    <string name="French">Français</string>
    <string name="Spanish">Español</string>
    <string name="about_collaborated">An collaborat:</string>
    <string name="about_coordinated_by">Coordinacion e dessenh de contenguts:</string>
    <string name="about_developed_by">Aguesta aplicacion s’a desvolopat en marc deth projècte</string>
    <string name="about_financia">Finance:</string>
    <string name="about_loop">&lt;p&gt;LOOP&lt;br /&gt;ua unitat mixta&lt;/p&gt;</string>
    <string name="about_technical_design">Dessenh tecnic</string>
    <string name="about_to_delete">S\'esfaçarà era rota:</string>
    <string name="account">Compde</string>
    <string name="action_settings">Ajustaments</string>
    <string name="add_ii_box">Híger ua hièstra d\'interaccion</string>
    <string name="add_ii_box_text">Arrosèga eth cursor sus era fòto entà fixar es coordenades e dempús hig un messatge en un idiòma coma minim.</string>
    <string name="add_image_video">Híger imatge o capturar vidèo:</string>
    <string name="add_info_point">Híger informacion en punt...</string>
    <string name="add_marker_confirm">Vòs híger aguest marcador?</string>
    <string name="add_or_not">Hígem o non?</string>
    <string name="all_about_water">Tot sus era aigua</string>
    <string name="all_routes">Toti es itineraris</string>
    <string name="already_registered">Ja ès registrat/ada.</string>
    <string name="already_registered_q">Ja t\'as registrat?</string>
    <string name="altitude">Nautada:</string>
    <string name="and_implemented_by_the_movement_ecology_lab_ceab_c">E a estat implementat per \"Observatori Limnològic dels Pirineus-LOOP\" e eth \"Movement Ecology Lab\", damb eth supòrt deth CEAB-CSIC, eth CREAF e era UB.</string>
    <string name="android_by">Aplicacion Android:</string>
    <string name="app_name">Eth Holet</string>
    <string name="auto_center">Vòs qu\'era mapa se centre automaticament ena tua posicion?</string>
    <string name="auto_center_explanation">Se trigues ÒC, era mapa se centrarà automaticament ena tua posicion quan te botges.</string>
    <string name="average_rating">Avaloracion mieja</string>
    <string name="average_rating_of_followed_route">Avaloracion mieja der itinerari qu\'as recorrut</string>
    <string name="average_response">Responsa mieja</string>
    <string name="avg_distance_samples">Distància mieja entre mòstres</string>
    <string name="avg_speed">Velocitat mieja</string>
    <string name="back_to_route">Torna ar itinerari</string>
    <string name="bassa_d_oles">Bassa d’Oles.</string>
    <string name="bearing">Orientacion:</string>
    <string name="before_leaving">Abans de gésser</string>
    <string name="before_leaving_environment_text">Er aument dera freqüentacion deth miei naturau a hèt que tanben activitats aparentament innòcues agen efèctes negatius. Per açò ei fòrça important auer un comportament respectuós damb eth miei e extremar es precaucions entà non alterar-lo. Era règla generau ei que non deishem cap traça deth nòste pas. Es principaus impactes que s\'an detectat e bères manères d\'evitar-les son:&lt;/p&gt;&lt;p&gt;Erosion e compactacion deth terren en caushigar-lo - Evitem caminar per dehòra des sendèrs mercadi e préner drecères. Enes passi estrets e arribents, coma norma de cortesia, qui baishe cedís eth pas ath que puge.&lt;/p&gt;&lt;p&gt;Molestar ara fauna, en especiau as espècies protegides, autant as individus coma ath sòn abitat - Evitem cridar e hèr massa tapatge. Susvelhem qu\'eth nòste can non acace ne ataque era fauna sauvatja. Respectem es sòns abitats: per exemple, non botgem ròques o troncs que les poguen servir de refugi, non lancem pèires enes rius e estanhs, ne metegam obstacles ara corrent d\'aigua enes rius. Rebrembatz qu\'eth banh\u0020\u0020e es espòrts aquatics non son permetudi enes estanhs.&lt;/p&gt;&lt;p&gt;Recolleccion d\'espècies botaniques, plan especiaument es protegides - Evitem arrincar flors e plantes. Respectem es regulacions ena recuelhuda d\'espècies comestibles, coma misharnons e d\'auti. Non recollectem fruts damb metòdes agressius entàs plantes.&lt;/p&gt;&lt;p&gt;Generacion de residus - Non deishem cap tipe de lordèra en miei, tanpòc es que pòden servir d\'aliment entara fauna sauvatja: non formen part dera sua dièta naturau e les hèn a cambiar es sòns abits d\'alimentacion e de comportament.&lt;/p&gt;&lt;p&gt;Huecs forestaus - S\'auem d\'alugar huec, ac haram sonque enes lòcs exprèssament condicionats, e susvelhem-lo. Non lancem puntes de cigarretes, ne alugades ne amortades.&lt;/p&gt;</string>
    <string name="before_leaving_environment_title">RESPÈCTE PETH MIEI</string>
    <string name="before_leaving_gps_text">&lt;p&gt;Eth sistèma de guida per GPS ei ua ajuda tara navegacion. En condicions optimes, mos pòt condusir pes itineraris damb fòrça precision. Totun i a fòrça factors (com ara eth relèu deth terren, obstacles o bromes que distorsionen era senhau deth satellit, o era sensibilitat deth nòste pròpi dispositiu) que pòden afectar ara precision. Per açò ei important balhar tanben atencion as indicacions escrites enes punts de rota e sajar d\'avalorar en tot moment era nòsta posicion a compdar dera interpretacion dera mapa, coma manères de confirmar eth posicionament GPS. Era aplicacion mos mòstre era nòsta posicion entorada per un cercle blu que represente era precision dera localizacion, que pòt èster variabla. Cau tier en compde qu\'era nosta posicion reau pòt èster en quaussevolh punt laguens d\'aguest cercle.&lt;/p&gt;&lt;p&gt;Cau auer activada en vòste dispositiu era opcion de localizacion per GPS.&lt;/p&gt;&lt;p&gt;Eth consum de bateria peth sistèma GPS ei naut, cau portar era bateria cargada ath 100% quan comencem er itinerari. Entà estauviar ath maxim era bateria ei recomanable de portar eth dispositiu en mòde de demora pendent er litinerari, enquia que s\'entene era senhau acustica e era vibracion d\'avís en arribar a bèth punt d\'interès.&lt;/p&gt;&lt;p&gt;Tanben ei recomanable d\'auer-lo en mòde “avion” en zònes sense cobertura entà evitar era despena de cercar senhau sense exit&lt;/p&gt;\n</string>
    <string name="before_leaving_gps_title">NAVEGACION DAMB GPS</string>
    <string name="before_leaving_safety_text">&lt;p&gt;Enes itineraris a pè, especiaument aqueri en zòna de nauta montanha:&lt;/p&gt;&lt;ul&gt;&lt;li&gt;Abans d\'escuélher un itinerari, valorem era dificultat e es nòstes capacitats e experiéncia.&lt;/li&gt;&lt;li&gt;Cau portar caucèr adequat.&lt;/li&gt;&lt;li&gt;Encara qu\'en gésser hèsque bon temps, ei recomanable portar en morralet bèra pèça d\'abric e un impermeable en prevision d\'un cambi de temps inesperat o d\'auer d\'abrigar a quauquarrés qu\'age patit un accident.&lt;/li&gt;&lt;li&gt;Cau béuer pro pendent era caminada tà mantier ua bona idratacion, e protegir-mos deth solei damb capèth, lunetes e crema protectora.&lt;/li&gt;&lt;li&gt;Enes itineraris en coche: Bèra ua des persones que non conduïsque ei qui a de manipular e manipular eth dispositiu mobil, entà evitar distraccions deth conductor.&lt;/li&gt;&lt;/ul&gt;&lt;p&gt;En cas d\'accident, cau seguir eth protocòl PAS - Protegir, Avisar, Socórrer&lt;/p&gt;&lt;ul&gt;&lt;li&gt;PROTEGIR a qui a patit er accident e a nosati, entà evitar d\'empejorar es conseqüéncies&lt;/li&gt;&lt;li&gt;AVISAR as servicis de socors: trucar ath 112 (generau) o ath 973 640 080 (Pompièrs Val dAran). Tietz en compde qu\'en fòrça zònes de nauta montanha non i a cobertura. Per açò ei convenient rebrembar quin ei eth darrèr lòc a on n\'i auie.&lt;/li&gt;&lt;li&gt;SOCÓRRER as persones herides, ena mesura des nòsti coneishements de prumèrs auxilis e s\'auem era seguretat de non agreujar era situacion.&lt;/li&gt;&lt;/ul&gt;</string>
    <string name="before_leaving_safety_title">SEGURETAT</string>
    <string name="built_from_foss">Eth Holet ei programat en còdi liure e dubèrt. Compròva era nòsta &lt;a href=\'../api/\'&gt;API&lt;/a&gt; o seguís-mos en &lt;a href=\'http://github.com/MoveLab\'&gt;Github&lt;/a&gt;!</string>
    <string name="cancel">Cancellar</string>
    <string name="choose_interactive_image">Triga era imatge interactiva\u0020</string>
    <string name="choose_it_my_itineraries">Es mèns itineraris...</string>
    <string name="choose_it_shared_itineraries">Itineraris compartidi...</string>
    <string name="choose_password">Triga ua clau d’accès</string>
    <string name="click_add_data">Hès clic entà híger dades...</string>
    <string name="close">Barrar</string>
    <string name="compass">Bossòla</string>
    <string name="confirm_delete">Confirmar esfaçar...</string>
    <string name="confirm_password">Confirma eth mot secrèt</string>
    <string name="content_by">Contenguts:</string>
    <string name="content_provider_authority_fixes">net.movelab.sudeau.content_provider.fixes</string>
    <string name="content_provider_authority_uploadqueue">net.movelab.sudeau.content_provider.uploadqueue</string>
    <string name="cookies_a">Aguest lòc web utilize cookies. Se continues navegant ací consideram qu\'accèptes eth sòn us. Entà mès informacion se te platz guarda era nòsta\u0020</string>
    <string name="cookies_b">Politica de privacitat</string>
    <string name="cookies_c">politica de privacitat</string>
    <string name="credits">Credits</string>
    <string name="credits_organized_by_old_version">Eth Holet a estat organizat per Ajuntament de Vielha e Mijaran.</string>
    <string name="current_language">Per defècte</string>
    <string name="current_location">Emplaçament actuau:</string>
    <string name="date">Data:</string>
    <string name="description">Descripcion:</string>
    <string name="detail_highlight">Vista de detalh</string>
    <string name="fix_interval">Intervau de rastreg</string>
    <string name="fix_interval_explanation">Fixa aguesta valor entà cambiar eth temps entre posicionaments quan rastreges eth tòn itinerari. Era valor minima ei 10</string>
    <string name="global_rating">Avaloracion globau</string>
    <string name="hide_my_highlights">Amaga es mèns comentaris</string>
    <string name="hide_my_routes">Amaga es mèns itineraris</string>
    <string name="holets_routes">Itineraris d\'Eth Holet</string>
    <string name="image">imatge</string>
    <string name="lang_ca">Català</string>
    <string name="lang_device">Usar er idiòma deth dispositiu</string>
    <string name="lang_en">English</string>
    <string name="lang_es_es">Español</string>
    <string name="lang_fr">Français\u0020</string>
    <string name="lang_gsc_es">Aranés</string>
    <string name="language">Idiòma:</string>
    <string name="latitude_short">Lat:</string>
    <string name="longitude_short">Long:</string>
    <string name="my_routes">Es mèns itineraris</string>
    <string name="nothing">Arren</string>
    <string name="ok">D\'acòrd</string>
    <string name="point_name">Nòm deth punt:</string>
    <string name="points_number">Nombre de punts</string>
    <string name="points_of_interest_number">Nombre de punts d\'interès</string>
    <string name="preferences">Preferéncies</string>
    <string name="save">Sauvar</string>
    <string name="slope">Desnivèu</string>
    <string name="take_survey">Respóner era enquèsta</string>
    <string name="total_distance">Distància totau</string>
    <string name="total_time">Temps totau</string>
    <string name="trip_data_edition">Edicion de dades dera rota...</string>
    <string name="trip_description">Descripcion dera rota:</string>
    <string name="trip_description_hint">Ua descripcion mès longa</string>
    <string name="trip_name">Nòm dera rota:</string>
    <string name="trip_name_hint">Un nòm cuert, de bon reconéisher</string>
    <string name="version">Version d\'Eth Holet</string>
    <string name="video">Vidèo</string>
    <string name="your_rating">Era tua avaloracion</string>
</resources>