<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_vert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:layout_centerHorizontal="true" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvEditRouteLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        android:gravity="center"
        android:text="@string/trip_data_edition"
        android:textAppearance="?android:attr/textAppearanceLarge"        
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/route_text_container"
        android:layout_width="fill_parent"
        android:layout_height="100dp"        
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvTotalDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/total_distance"            
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/total_time"            
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvPointsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/points_number"            
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvHighLightsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/points_of_interest_number"            
            android:textSize="12sp" />
        
        <TextView
            android:id="@+id/tvRamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/slope"            
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:layout_marginTop="20dp"        
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvHlNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:text="@string/trip_name" />

        <EditText
            android:id="@+id/et_RouteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/trip_name_hint" />

        <TextView
            android:id="@+id/tvEditRouteDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:text="@string/trip_description" />

        <EditText
            android:id="@+id/et_RouteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/trip_description_hint"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"        
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_editRoute_save"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"                       
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>
</ScrollView>