<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_vert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvHighLightDetailLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        android:gravity="center"
        android:text="@string/detail_highlight"
        android:textSize="30sp" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >
	    
	    <ImageView
	    android:id="@+id/highLightTypeIv"
	    android:layout_width="wrap_content"        
	    android:layout_height="wrap_content"        
	    android:contentDescription="@string/app_name"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >
	    
	    <ImageView
	    android:id="@+id/highLightPicture"
	    android:layout_width="wrap_content"        
	    android:layout_height="wrap_content"           
	    android:contentDescription="@string/app_name"/>
	    
    </LinearLayout>

    <TextView
        android:id="@+id/tvHlNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point_name" />

    <TextView
        android:id="@+id/tvHlDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvHlData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/date"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvLatHl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/latitude_short"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvLongHl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/longitude_short"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvHlAlt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/altitude"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvUserRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/your_rating"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/ratBarUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/tvGlobalRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/global_rating"
            android:textSize="15sp" />
        <RatingBar
            android:id="@+id/ratBarGlobal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>

</LinearLayout>
</ScrollView>