<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_vert_sttng"
    android:layout_width="match_parent"
    android:layout_height="match_parent">    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >



        <TextView
        android:id="@+id/tvLblSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        android:gravity="center"
        android:text="@string/preferences"
        android:textSize="@dimen/activity_label_title" />

        <TextView
            android:id="@+id/version_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textSize="16sp"
            android:text="@string/version"
            android:layout_margin="10dp"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tvCurrentLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
        		android:id="@+id/radioLang"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" >        		

	            <RadioButton
	                android:id="@+id/rbAranes"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:onClick="onRadioButtonClicked"
	                android:text="@string/lang_gsc_es" />
	
	            <RadioButton
	                android:id="@+id/rbSpanish"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:onClick="onRadioButtonClicked"
	                android:text="@string/lang_es_es" />

                <RadioButton
                    android:id="@+id/rbCatala"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/lang_ca" />

                <RadioButton
	                android:id="@+id/rbEnglish"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:onClick="onRadioButtonClicked"
                    android:visibility="gone"
	                android:text="@string/lang_en" />
	            
	            <RadioButton
	                android:id="@+id/rbFrench"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
                    android:visibility="gone"
	                android:onClick="onRadioButtonClicked"
	                android:text="@string/lang_fr" />
	            <RadioButton
	                android:id="@+id/rbDevice"
	                android:layout_width="wrap_content"
                    android:visibility="gone"
	                android:layout_height="wrap_content"
	                android:onClick="onRadioButtonClicked"
	                android:text="@string/lang_device" />
			</RadioGroup>

            <View
                android:background="#fff"
                android:layout_width = "fill_parent"
                android:layout_height="1dip"/>

            <LinearLayout
                android:id="@+id/auto_center_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tvAutoCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvAutoCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_center_explanation"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


                <ToggleButton
                    android:id="@+id/toggleAutoCenter"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
</LinearLayout>


            <View android:id="@+id/separator"
                android:background="#fff"
                android:layout_width = "fill_parent"
                android:layout_height="1dip"/>

            <LinearLayout
                android:id="@+id/fix_interval_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_margin="10dp">

            <TextView
                android:id="@+id/tvStepInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fix_interval"
                android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvStepInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fix_interval_explanation"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


                <EditText
                android:id="@+id/etFixInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>


            </LinearLayout>

            <View
                android:background="#fff"
                android:layout_width = "fill_parent"
                android:layout_height="1dip"/>

            <Button
                android:id="@+id/bOK"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ok"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>