<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewHighLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvHlName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey"
            android:gravity="center"
            android:text="@string/add_info_point"            
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvHlData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"                
                android:text="@string/date"                
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvLatHl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"                
                android:text="@string/latitude_short"                
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvLongHl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"                
                android:text="@string/longitude_short"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvHlAlt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"                
                android:text="@string/altitude"                
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvHlNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_name" />

        <EditText
            android:id="@+id/txtNameHl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            android:ems="10" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/txtLongHl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvImageVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image_video" />

        <LinearLayout
            android:layout_width="match_parent"            
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/rgImageVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rbImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/image"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/video"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbImgVidNull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/nothing"
                    android:textSize="12sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"                
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btnPicture"                    
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@android:drawable/ic_menu_camera" />

                <ImageButton
                    android:id="@+id/btnVideo"                    
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@android:drawable/ic_media_play" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnHlSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnHlCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>